Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-757

[PATCH] proton-c: transport errors are output to stderr in 0.8 onwards

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.8
    • proton-0.9
    • proton-c
    • None

    Description

      This looks to be since e5696c19.

      pn_do_error already sets the transport->condition fields which are accessible as a pn_error from pn_transport_error, so we shouldn't really output them to stderr unless tracing is enabled.

      Attachments

        Activity

          People

            dnwe Dominic Evans
            dnwe Dominic Evans
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: