PROTON-757: stop transport errs printing to stderr

This looks to be since e5696c19 - pn_do_error already sets the
transport->condition fields which are accessible as a pn_error from
pn_transport_error, so we shouldn't really output them to stderr unless
tracing is enabled.